--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
     
-    <link rel="stylesheet" href="style_lab2.css">
+    <link rel="stylesheet" href="style.css">
 
     <!-- Link iconify -->
     <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
